# Truxify

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.ml  README.md  TODO.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  issue-body.txt  issue_body_1.txt  issue_body_10.txt  issue_body_2.txt  issue_body_3.txt  issue_body_4.txt  issue_body_5.txt  issue_body_6.txt  issue_body_7.txt  issue_body_8.txt  issue_body_9.txt  package-lock.json  package.json  pr_body.md  pr_comment.md  pubspec.yaml  update_backend.py  update_shell.py
.agents/: AGENTS.md
.github/: CODEOWNERS  pr-labeler-rules.json
blockchain/: .env.example  DEPLOYMENT.md  README.md  hardhat.config.cjs  package-lock.json  package.json
dart_defines/: dev.env
docs/: DRIVER_LOCATIONS_SECURITY_DEPLOYMENT.md  INCIDENT_RESPONSE.md  architecture.md  deployment.md  migration_add_delivery_otp.sql  migration_add_driver_locations_rls.sql  migration_add_escrow.sql  migration_add_estimated_price.sql  migration_add_wallet_address.sql  migration_complete_trip_update.sql  migration_rls_policies.sql  migration_wallet_tx_hash.sql  schema.md  supabase_setup.sql  test_driver_locations_rls.sql
ebpf/: loader.py  package.json  requirement.txt  routes.js
k8s/: README.md  configmap.yaml  namspace.yaml  secrets.yaml
scripts/: check-escrow-abi.sh  check-no-client-credentials.sh  create_issues_prs.sh  generate_dart_defines.sh  request_reviews_local.js
snyk/: .snyk  routes.js  snyk-github-actions.yaml  snyk-integration.sh  (+2 more)
wasm/rust/: Cargo.toml
wasm/rust/src/: lib.rs
(+800 files in other folders)
